# kwooty

./: CMakeLists.txt  INSTALL.txt  Messages.sh  README.txt  TODO  kwooty.spec
po/: CMakeLists.txt  kwooty.pot  merge.sh
po/cs/: CMakeLists.txt  kwooty.po
po/de/: CMakeLists.txt  kwooty.po
po/fr/: CMakeLists.txt  kwooty.po
po/nl/: kwooty.po
src/: CMakeLists.txt  actionbuttonsmanager.cpp  actionbuttonsmanager.h  actionsmanager.cpp  actionsmanager.h  centralwidget.cpp  centralwidget.h  clientmanagerconn.cpp  clientmanagerconn.h  clientsobserver.cpp  clientsobserver.h  core.cpp  core.h  datarestorer.cpp  datarestorer.h  extract.cpp  extract.h  extractbase.cpp  extractbase.h  extractrar.cpp  extractrar.h  extractsplit.cpp  extractsplit.h  extractzip.cpp  extractzip.h  fileoperations.cpp  fileoperations.h  folderwatcher.cpp  folderwatcher.h  icontextwidget.cpp  icontextwidget.h  infobar.cpp  infobar.h  infocollectordispatcher.cpp  infocollectordispatcher.h  itemabstractupdater.cpp  itemabstractupdater.h  itemchildrenmanager.cpp  itemchildrenmanager.h  itemdelegate.cpp  (+81 more)
src/actions/: actionbuttonsmanager.cpp  actionbuttonsmanager.h  actionfiledeletemanager.cpp  actionfiledeletemanager.h  actionfilemanagerbase.cpp  actionfilemanagerbase.h  actionmergemanager.cpp  actionmergemanager.h  actionrenamemanager.cpp  actionrenamemanager.h  actionsmanager.cpp  actionsmanager.h
src/data/: globalfiledata.cpp  globalfiledata.h  itemstatusdata.cpp  itemstatusdata.h  jobnotifydata.cpp  jobnotifydata.h  nzbcollectiondata.cpp  nzbcollectiondata.h  nzbfiledata.cpp  nzbfiledata.h  postdownloadinfodata.cpp  postdownloadinfodata.h  segmentdata.cpp  segmentdata.h  segmentinfodata.cpp  segmentinfodata.h  serverdata.cpp  serverdata.h
src/icons/: CMakeLists.txt
src/jobs/: concatsplitfilesjob.cpp  concatsplitfilesjob.h
src/observers/: clientsobserver.cpp  clientsobserver.h  clientsobserverbase.cpp  clientsobserverbase.h  clientsperserverobserver.cpp  clientsperserverobserver.h  queuefileobserver.cpp  queuefileobserver.h
src/plugins/: CMakeLists.txt  plugin.cpp  plugin.h  pluginmanager.cpp  pluginmanager.h
src/plugins/autoretry/: CMakeLists.txt  autoretry.cpp  autoretry.h  autoretryplugin.cpp  autoretryplugin.h  kwooty_autoretryplugin.desktop  kwooty_autoretrysettings.desktop  kwooty_autoretrysettings.kcfg  kwooty_autoretrysettings.kcfgc  preferencesautoretry.cpp  preferencesautoretry.h  preferencesautoretry.ui
src/plugins/categories/: CMakeLists.txt  categories.cpp  categories.h  categoriesfilehandler.cpp  categoriesfilehandler.h  categoriesmanual.cpp  categoriesmanual.h  categoriesmodel.cpp  categoriesmodel.h  categoriesplugin.cpp  categoriesplugin.h  kwooty_categories_plugins_debug.cpp  kwooty_categories_plugins_debug.h  kwooty_categoriesplugin.desktop  kwooty_categoriessettings.desktop  kwooty_categoriessettings.kcfg  kwooty_categoriessettings.kcfgc  mimedata.cpp  mimedata.h  preferencescategories.cpp  preferencescategories.h  preferencescategories.ui  utilitycategories.cpp  utilitycategories.h
src/plugins/scheduler/: CMakeLists.txt  kwooty_schedulerplugin.desktop  kwooty_schedulersettings.desktop  kwooty_schedulersettings.kcfg  kwooty_schedulersettings.kcfgc  preferencesscheduler.cpp  preferencesscheduler.h  preferencesscheduler.ui  scheduler.cpp  scheduler.h  schedulerfilehandler.cpp  schedulerfilehandler.h  schedulerplugin.cpp  schedulerplugin.h  schedulertableitemdelegate.cpp  schedulertableitemdelegate.h
src/plugins/watchfolder/: CMakeLists.txt  kwooty_watchfolderplugin.desktop  kwooty_watchfoldersettings.desktop  kwooty_watchfoldersettings.kcfg  kwooty_watchfoldersettings.kcfgc  preferenceswatchfolder.cpp  preferenceswatchfolder.h  preferenceswatchfolder.ui  watchfolder.cpp  watchfolder.h  watchfolderplugin.cpp  watchfolderplugin.h  watchfoldersettings.kcfgc
src/preferences/: kconfiggrouphandler.cpp  kconfiggrouphandler.h  kwootysettings.kcfg  kwootysettings.kcfgc  preferencesdisplay.cpp  preferencesdisplay.h  preferencesdisplay.ui  preferencesgeneral.cpp  preferencesgeneral.h  preferencesgeneral.ui  preferencesplugins.cpp  preferencesplugins.h  preferencesprograms.cpp  preferencesprograms.h  preferencesprograms.ui  preferencesserver.cpp  preferencesserver.h  preferencesserver.ui  preferencesshutdown.cpp  preferencesshutdown.h  preferencesshutdown.ui  serversettings.ui  settings.kcfg  settings.kcfgc
src/shutdown/: sessionbase.cpp  sessionbase.h  sessiongnome2.cpp  sessiongnome2.h  sessiongnome3.cpp  sessiongnome3.h  sessionkde.cpp  sessionkde.h  shutdownmanager.cpp  shutdownmanager.h
src/utilities/: utility.cpp  utility.h  utilityiconpainting.cpp  utilityiconpainting.h  utilityserverstatus.cpp  utilityserverstatus.h
src/uudeviewCMake/: FindUUDEVIEW.cmake
src/widgets/: centralwidget.cpp  centralwidget.h  iconcapacitywidget.cpp  iconcapacitywidget.h  icontextwidget.cpp  icontextwidget.h  mystatusbar.cpp  mystatusbar.h  mytreeview.cpp  mytreeview.h  serverpreferenceswidget.cpp  serverpreferenceswidget.h  serverstatuswidget.cpp  serverstatuswidget.h  servertabwidget.cpp  servertabwidget.h  sidebarwidget.cpp  sidebarwidget.h  statusbarwidgetbase.cpp  statusbarwidgetbase.h  textpushbuttonwidget.cpp  textpushbuttonwidget.h
